--- a/package.json
+++ b/package.json
@@ -4,10 +4,15 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "node index.js"
+    "build": "tsc",
+    "start": "node dist/index.js"
   },
   "dependencies": {
+    "@types/express": "^4.17.13",
+    "@types/node": "^17.0.21",
+    "@types/puppeteer": "^5.4.5",
     "express": "^4.17.3",
-    "puppeteer": "^13.4.0"
+    "puppeteer": "^13.4.0",
+    "typescript": "^4.5.5"
   }
 }
